# alpc

./: Cargo.toml  README.md
src/: config.rs  constants.rs  lib.rs  main.rs
tests/: test_alphabetic.rs  test_numeric.rs
