[package]
name = "alpc"
version = "0.0.2"
authors = ["DevHyperCoder <arduinoleo88@gmail.com>"]
edition = "2018"
description = "Aviation Language Phonetic Converter"
readme = "README.md"
repository = "https://github.com/DevHyperCoder/alpc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
