[package]
name = "alpc"
version = "1.0.1"
authors = ["DevHyperCoder <arduinoleo88@gmail.com>"]
edition = "2018"
description = "Aviation Language Phonetic Converter"
readme = "README.md"
repository = "https://github.com/DevHyperCoder/alpc"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
